# jstocks

./: .env.example  .gitignore  daily_update.sh  jstocks.service  manage.py  pyproject.toml  requirements.txt  telegram_session.session-journal  weekly_update.sh
docs/: commands.md  deployment.md  init_financial.md  save_daily_chart.md  save_etf_chart.md  save_etf_info.md  save_financial_naver.md  save_fnguide_report.md  save_gongsi_stock.md  save_index_chart.md  save_init_financial.md  save_investor_trend.md  save_market_trend.md  save_monthly_chart.md  save_nodaji_stock.md  save_report.md  save_sector.md  save_short_selling.md  save_stock_info.md  save_stock_list.md  save_stock_sector.md  save_weekly_chart.md
jemu/: 2020_1분기보고서_02_손익계산서_20231117.txt  2020_1분기보고서_02_손익계산서_연결_20231117.txt  2020_3분기보고서_02_손익계산서_20240517.txt  2020_3분기보고서_02_손익계산서_연결_20240517.txt  2020_반기보고서_02_손익계산서_20231117.txt  2020_반기보고서_02_손익계산서_연결_20231117.txt  2020_사업보고서_02_손익계산서_20250930.txt  2020_사업보고서_02_손익계산서_연결_20250930.txt  2021_1분기보고서_02_손익계산서_20240713.txt  2021_1분기보고서_02_손익계산서_연결_20240713.txt  2021_3분기보고서_02_손익계산서_20240713.txt  2021_3분기보고서_02_손익계산서_연결_20240713.txt  2021_반기보고서_02_손익계산서_20240611.txt  2021_반기보고서_02_손익계산서_연결_20240611.txt  2021_사업보고서_02_손익계산서_20250606.txt  2021_사업보고서_02_손익계산서_연결_20250606.txt  2022_1분기보고서_02_손익계산서_20230718.txt  2022_1분기보고서_02_손익계산서_연결_20230718.txt  2022_3분기보고서_02_손익계산서_20240611.txt  2022_3분기보고서_02_손익계산서_연결_20240611.txt  2022_반기보고서_02_손익계산서_20240611.txt  2022_반기보고서_02_손익계산서_연결_20240611.txt  2022_사업보고서_02_손익계산서_20251113.txt  2022_사업보고서_02_손익계산서_연결_20251113.txt  (+21 more)
(+119 files in other folders)
