[tool.poetry]
name = "stock"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.5"
beautifulsoup4 = "^4.14.2"
lxml = "^6.0.2"
python-decouple = "^3.8"
django = "^5.2.8"
pandas = "^2.3.3"
openpyxl = "^3.1.5"
telethon = "^1.42.0"
playwright = "^1.56.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
